<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:descendantFocusability="beforeDescendants"
	android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:text="@string/help_text"
        tools:context=".org.pondar.chesscalendar.ChessCalendarMain" />
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	xmlns:tools="http://schemas.android.com/tools"
    	android:orientation="horizontal"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:weightSum="2.0" >
    <Button 
        android:id="@+id/calendarButton"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:text="@string/changeSettings"/>
    
     <Button 
        android:id="@+id/exitButton"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:text="@string/exit"/>
   </LinearLayout>
   
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	xmlns:tools="http://schemas.android.com/tools"
    	android:orientation="horizontal"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:weightSum="2.0" >
     
       
        
    <EditText
        android:layout_width="0px"
        android:layout_height="wrap_content" 
        android:id="@+id/searchText"
        android:layout_weight="1.5"
        android:inputType="text"
        android:focusable="true"
        android:imeOptions="actionSearch"
        android:minLines="1"     
        android:maxLines="1" 
        android:text=""/>
        
     <Button 
        android:id="@+id/searchButton"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:text="@string/searchButtonLabel"/> 
       
     </LinearLayout>
    
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:id="@+id/listHeader"
        android:text=""
        tools:context=".org.pondar.chesscalendar.ChessCalendarMain" />
    
    <ListView 
        android:layout_width="match_parent"
        android:id="@+id/listView"
        android:layout_height="wrap_content">      
    </ListView>
    

</LinearLayout>
